# kepler

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  tests.yml  type-check.yml
examples/: README.md  basic_experiment.py  kepler_notebook_example.ipynb  multiple_experiments.py
kepler/api/: __init__.py  experiment.py
kepler/cli/: __init__.py  cli.py
kepler/models/: __init__.py  experiment.py  log.py  storage.py
kepler/tui/: __init__.py  app.py
tests/: test_experiment.py
