[project]
name = "kepler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "textual>=3.2.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",
]
